--- a/2020.10.01.md
+++ b/2020.10.01.md
@@ -28,7 +28,12 @@ Epiphanies
         - Keep Talking and Nobody Explodes
         - Among Us
     - Break off to small groups - come back and report
+    - Games: Among us, Keep talking and everyone explodes
+    - Rent a llama
 - Goat to meeting
+- https://github.com/bitnami-labs/sealed-secrets
+- "Activation Energy"
+- Re: procrastination: "What is stopping me from doing this right now?"
 
 
 Successful virtual team events
